--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"autoprefixer": "^10.4.15",
 		"postcss": "^8.4.27",
 		"svelte": "^4.0.5",
+		"svelte-carousel": "^1.0.25",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
